# mc-server-manager-v2

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  daemon.rs  downloader.rs  lib.rs
