[package]
name = "mc-server-manager-v2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[[bin]]
name = "downloader"
path = "src/downloader.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "app_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = {version = "3.1.4", features = ["json"]}

